welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: ';' expected but ')' found.
	if (10<=a && a<=20) && (b<20 || b<10))
                                             ^